# backend/docs/swagger.yaml
@@ -47,56 +47,6 @@ definitions:
         example: status bad request
         type: string
     type: object
-  report.CreateReportDTO:
-    properties:
-      body:
-        type: string
-      department:
-        type: string
-      header:
-        type: string
-    required:
-    - department
-    - header
-    type: object
-  report.GetAllReportsDTO:
-    properties:
-      reports:
-        items:
-          $ref: '#/definitions/report.Report'
-        type: array
-    type: object
-  report.Report:
-    properties:
-      body:
-        type: string
-      department:
-        type: string
-      edited:
-        type: string
-      header:
-        type: string
-      id:
-        type: integer
-      shortBody:
-        type: string
-      labels:
-        description: '[]label.Label'
-        items:
-          $ref: '#/definitions/label.Label'
-        type: array
-    type: object
-  report.UpdateReportDTO:
-    properties:
-      body:
-        type: string
-      department:
-        type: string
-      header:
-        type: string
-      id:
-        type: integer
-    type: object
   label.CreateLabelDTO:
     properties:
       department:
@@ -133,12 +83,62 @@ definitions:
       name:
         type: string
     type: object
+  report.CreateReportDTO:
+    properties:
+      body:
+        type: string
+      department:
+        type: string
+      header:
+        type: string
+    required:
+    - department
+    - header
+    type: object
+  report.GetAllReportsDTO:
+    properties:
+      reports:
+        items:
+          $ref: '#/definitions/report.Report'
+        type: array
+    type: object
+  report.Report:
+    properties:
+      body:
+        type: string
+      department:
+        type: string
+      edited:
+        type: string
+      header:
+        type: string
+      id:
+        type: integer
+      labels:
+        description: '[]label.Label'
+        items:
+          $ref: '#/definitions/label.Label'
+        type: array
+      shortBody:
+        type: string
+    type: object
+  report.UpdateReportDTO:
+    properties:
+      body:
+        type: string
+      department:
+        type: string
+      header:
+        type: string
+      id:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact: {}
   description: API Server for reports-taking applications
   termsOfService: http://swagger.io/terms/
-  title: Neat.ly API
+  title: RS
   version: "1.0"
 paths:
   /api/v1/accounts/:id:
@@ -169,7 +169,7 @@ paths:
           schema:
             $ref: '#/definitions/e.ErrorResponse'
       summary: getAccount
-      labels:
+      tags:
       - account
   /api/v1/accounts/login:
     post:
@@ -200,7 +200,7 @@ paths:
           schema:
             $ref: '#/definitions/e.ErrorResponse'
       summary: Login
-      labels:
+      tags:
       - account
   /api/v1/accounts/register:
     post:
@@ -231,8 +231,160 @@ paths:
           schema:
             $ref: '#/definitions/e.ErrorResponse'
       summary: Register
-      labels:
+      tags:
       - account
+  /api/v1/labels:
+    get:
+      consumes:
+      - application/json
+      description: get labels from user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/label.GetAllLabelsDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all labels
+      tags:
+      - labels
+  /api/v1/labels/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete one label by ID
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: integer
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete one label by ID
+      tags:
+      - labels
+    get:
+      consumes:
+      - application/json
+      description: get one label by ID
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/label.Label'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get one label by ID
+      tags:
+      - labels
+    patch:
+      consumes:
+      - application/json
+      description: update one label by ID
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: label info
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/label.UpdateLabelDTO'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update label by ID
+      tags:
+      - labels
   /api/v1/reports:
     get:
       consumes:
@@ -269,7 +421,7 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get all reports from user filter by label
-      labels:
+      tags:
       - reports
     post:
       consumes:
@@ -308,7 +460,7 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create report
-      labels:
+      tags:
       - reports
   /api/v1/reports/{id}:
     delete:
@@ -338,7 +490,7 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Delete Report
-      labels:
+      tags:
       - reports
     get:
       consumes:
@@ -369,7 +521,7 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get Report By Id
-      labels:
+      tags:
       - reports
     patch:
       consumes:
@@ -404,7 +556,7 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update Report
-      labels:
+      tags:
       - reports
   /api/v1/reports/{id}/labels:
     get:
@@ -443,7 +595,7 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get all labels on one report
-      labels:
+      tags:
       - labels
     post:
       consumes:
@@ -487,161 +639,9 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create label
-      labels:
+      tags:
       - labels
-  /api/v1/labels:
-    get:
-      consumes:
-      - application/json
-      description: get labels from user
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/label.GetAllLabelsDTO'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Get all labels
-      labels:
-      - labels
-  /api/v1/labels/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: delete one label by ID
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: integer
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete one label by ID
-      labels:
-      - labels
-    get:
-      consumes:
-      - application/json
-      description: get one label by ID
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/label.Label'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Get one label by ID
-      labels:
-      - labels
-    patch:
-      consumes:
-      - application/json
-      description: update one label by ID
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: label info
-        in: body
-        name: dto
-        required: true
-        schema:
-          $ref: '#/definitions/label.UpdateLabelDTO'
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/e.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Update label by ID
-      labels:
-      - labels
-  /api/v1/labels/{id}/labels/{label_id}:
+  /api/v1/reports/{id}/labels/{label_id}:
     delete:
       consumes:
       - application/json
@@ -683,8 +683,8 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Detach label by ID from report by ID
-      labels:
-      - labels
+      tags:
+      - reports
 securityDefinitions:
   ApiKeyAuth:
     in: header
